# babeltrace

./: .gitignore  Makefile.am  configure.ac
bindings/python/: Makefile.am  setup.py.in
bindings/python/babeltrace/: __init__.py.in
bindings/python/babeltrace/babeltrace/: writer.py
bindings/python/bt2/: Makefile.am  setup.py.in
bindings/python/bt2/bt2/: __init__.py.in  clock_class.py  clock_class_priority_map.py  clock_value.py  component.py  connection.py  domain.py  event.py  event_class.py  field_class.py  field_types.py  fields.py  graph.py  logging.py  native_bt.i  native_bt_field_class.i  native_bt_streamclass.i  native_bt_values.i  native_btctfwriter.i  native_btevent.i  native_bteventclass.i  native_btfields.i  native_btft.i  native_btstream.i  native_bttrace.i  notification.py  notification_iterator.py  packet.py  plugin.py  port.py  query_executor.py  stream.py  stream_class.py  trace.py  trace_collection_notification_iterator.py  values.py
bindings/python/bt2/bt2/ctfwriter/: CtfWriter.py  __init__.py  clock.py  clock_class.py  domain.py  event.py  event_class.py  field_types.py  fields.py  native_bt_ctf_clock.i  native_bt_ctf_clockclass.i  native_bt_ctf_field_types.i  native_bt_ctf_fields.i  native_bt_ctf_stream.i  native_bt_ctf_trace.i  native_btctf_event.i  native_btctf_fieldtypes.i  native_btctf_stream.i  stream.py  stream_class.py  trace.py  values.py
bindings/python/bt2/bt2/internal/: __init__.py  clock_class.py  domain.py  event.py  event_class.py  field_types.py  fields.py  object.py  stream.py  stream_class.py  trace.py
cli/: babeltrace.c
include/babeltrace/: property-internal.h  values-internal.h  values.h
include/babeltrace/ctf-ir/: event.h  field-types-internal.h  field-types.h  fields-internal.h  fields.h  packet.h  stream-class.h  stream.h  trace.h
lib/ctf-ir/: clock-class.c  field-types.c  fields.c  resolve-field-path.c  stream-class.c  stream.c  trace.c
lib/ctf-writer/: Makefile.am  clock-class.c  clock.c  stream-class.c
lib/graph/: component-class-sink-colander.c  graph.c
plugins/: Makefile.am
plugins/ctf/fs-src/: fs.c  (+2 more)
plugins/utils/: Makefile.am  fake.c  fake.h  noop.c  noop.h  plugin.c
tests/: Makefile.am
tests/debug-info-data/: Makefile
tests/lib/: test_ctf_writer.c
tests/plugins/: test_bin_info.c  test_bin_info_i386-linux-gnu.in  test_bin_info_powerpc-linux-gnu.in  test_bin_info_powerpc64le-linux-gnu.in  test_bin_info_x86_64-linux-gnu.in  test_dwarf.c  test_dwarf_powerpc-linux-gnu.in  test_dwarf_powerpc64le-linux-gnu.in  test_lttng_utils_debug_info.in  test_lttng_utils_debug_info.py
(+79 files in other folders)
